--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,17 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
+        android:name=".QuizApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".QuizApp"
-        android:theme="@style/Theme.Quizdroid"
-        android:requestLegacyExternalStorage="true">
+        android:theme="@style/Theme.Quizdroid">
+        <activity
+            android:name=".TestActivity"
+            android:exported="false" />
         <activity
             android:name=".Fourth_Activity"
             android:exported="false" />
